--- a/index.html
+++ b/index.html
@@ -2,15 +2,27 @@
 
 <html lang="en">
 <head>
+
   <meta charset="utf-8">
 
   <title>Sprint Challenge - Home</title>
 
   <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
-  <link rel="stylesheet" href="css/index.css">
+  <link href="style/index.css" link rel="stylesheet">
 
 </head>
-
+<header>
+    <div class="logo">
+        <img src="file:///C:/Users/My%20i5/Desktop/Lambda/Sprint-Challenge--User-Interface/assets/lambda-black.png" alt="lambda logo">
+    </div>
+    <nav>
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#products">Products</a>
+        <a href="#blog">Blog</a>
+        <a href="#contact">Contact</a>
+    </nav>
+</header>
 <body>
     <div class="container">
    
