--- a/index.html
+++ b/index.html
@@ -9,13 +9,11 @@
 
   <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
   <link href="style/index.css" link rel="stylesheet">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <header>
-    <div class="logo">
-        <img src="file:///C:/Users/My%20i5/Desktop/Lambda/Sprint-Challenge--User-Interface/assets/lambda-black.png" alt="lambda logo">
-    </div>
     <nav>
+        <a href="#logo"><img src="file:///C:/Users/My%20i5/Desktop/Lambda/Sprint-Challenge--User-Interface/assets/lambda-black.png" alt="lambda logo"></a>
         <a href="#home">Home</a>
         <a href="#about">About</a>
         <a href="#products">Products</a>
@@ -23,6 +21,9 @@
         <a href="#contact">Contact</a>
     </nav>
 </header>
+<section class="banner">
+    <img src="file:///C:/Users/My%20i5/Desktop/Lambda/Sprint-Challenge--User-Interface/assets/jumbo.jpg">
+</section>
 <body>
     <div class="container">
    
