--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav>
         <a href="#logo"><img src="file:///C:/Users/My%20i5/Desktop/Lambda/Sprint-Challenge--User-Interface/assets/lambda-black.png" alt="lambda logo"></a>
         <a href="#home">Home</a>
-        <a href="#about">About</a>
+        <a href="https://github.com/brandon-ld/Sprint-Challenge--User-Interface/blob/master/about.html">About</a>
         <a href="#products">Products</a>
         <a href="#blog">Blog</a>
         <a href="#contact">Contact</a>
@@ -77,7 +77,7 @@
         <footer>
             <nav>
                 <a href="#">Home</a>
-                <a href="#">About</a>
+                <a href="https://github.com/brandon-ld/Sprint-Challenge--User-Interface/blob/master/about.html">About</a>
                 <a href="#">Products</a>
                 <a href="#">Blog</a>
                 <a href="#">Contact</a>
